# css-var-kit

./: Cargo.toml  README.md  justfile  knip.json  mise.toml  oxfmt.config.ts  oxlint.config.ts  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prek.toml  tombi.toml  tsconfig.json
crates/css-var-kit/: Cargo.toml  LICENSE  README.md
crates/css-var-kit/src/: cli.rs  commands.rs  config.rs  diagnostic_renderer.rs  help.txt  kind_set.rs  lib.rs  main.rs  owned.rs  parser.rs  position.rs  rules.rs  searcher.rs  type_checker.rs  variable_resolver.rs
crates/css-var-kit/src/commands/: lint.rs  lsp.rs
crates/css-var-kit/src/commands/lsp/: completion.rs  definition.rs  diagnostics.rs  file_watcher.rs  logger.rs  position.rs  rename.rs  uri.rs
crates/css-var-kit/src/config/: file.rs  rules.rs
crates/css-var-kit/src/parser/: css.rs  html_like.rs
crates/css-var-kit/src/rules/: enforce_variable_use.rs  no_inconsistent_variable_definition.rs  no_undefined_variable_use.rs  no_variable_type_mismatch.rs  undefined_variables.rs
crates/css-var-kit/src/rules/enforce_variable_use/: config.rs
crates/css-var-kit/src/searcher/: conditions.rs
crates/css-var-kit/src/searcher/conditions/: non_custom_properties.rs  variable_definitions.rs  variable_usages.rs
crates/css-var-kit/src/type_checker/: kind_set.rs  property_types.rs  value_classifier.rs  value_kind.rs  variable_resolver.rs
crates/css-var-kit/tests/: cli.rs  config.rs  enforce_variable_use.rs  html_like.rs  inconsistent_definition.rs  lint.rs  lsp.rs  lsp_html_like.rs  lsp_server.rs  rule_option.rs  type_mismatch.rs  undefined_variable.rs
crates/css-var-kit/tests/common/: lsp_client.rs  mod.rs
crates/css-var-kit/tests/fixtures/components/: card.css
crates/css-var-kit/tests/fixtures/default/: variables.css
crates/css-var-kit/tests/fixtures/enforce-variable-use/: cvk.json  style.css
crates/css-var-kit/tests/fixtures/html-like/: Button.vue  Card.svelte  ErrorComponent.vue  LessComponent.vue  Page.astro
crates/css-var-kit/tests/fixtures/html-like-lsp/: Component.vue  Tokens.vue  tokens.css
crates/css-var-kit/tests/fixtures/inconsistent-definition/: cvk.json  style.css
crates/css-var-kit/tests/fixtures/no-config/: variables.css
crates/css-var-kit/tests/fixtures/type-mismatch/: cvk.json  style.css  variables.css
crates/css-var-kit/tests/fixtures/undefined-variable/: multiple.css  (+2 more)
crates/css-var-kit/tests/lsp/: mod.rs
(+32 files in other folders)
