[package]
name = "css-var-kit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "A simple, lightweight toolkit to help build design systems using raw CSS."
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["css", "css-variables", "language-server"]
categories = ["development-tools", "web-programming"]

[[bin]]
name = "cvk"
path = "src/main.rs"

[dependencies]
bitflags = "2"
clap = { version = "4.5.60", features = ["derive"] }
crossbeam-channel = "0.5"
cssparser = "0.33"
globset = "0.4"
json-strip-comments = "3.1.0"
lightningcss = { version = "1.0.0-alpha.70", default-features = false, features = [
  "substitute_variables"
] }
lsp-server = "0.7"
lsp-types = "0.97"
notify = "8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
unicode-width = "0.2"
yansi = { version = "1", features = ["detect-tty"] }

[dev-dependencies]
assert_cmd = "2.1.2"
predicates = "3.1.4"
tempfile = "3"
